fixing gap

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -122,7 +122,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 2.6rem;
+  gap: 3rem;
   max-width: 38.4rem;
   margin: 17.4rem 4rem 0;
   padding: 4rem;
@@ -135,7 +135,7 @@ body {
     max-width: 32.7rem;
     padding: 2.4rem;
     margin: 11.6rem 2.4rem 0;
-    gap: 3rem;
+    gap: 2.4rem;
   }
 }
 .card-avatar {
