--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 2.6rem;
+  gap: 3rem;
   max-width: $default-width;
   margin: 17.4rem 4rem 0;
   padding: 4rem;
@@ -13,7 +13,7 @@
     max-width: $mobile-width;
     padding: 2.4rem;
     margin: 11.6rem 2.4rem 0;
-    gap: 3rem;
+    gap: 2.4rem;
   }
   &-avatar {
     width: 8.8rem;
